8-trust-sources/poc-yaml/ksvc-other-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
spec: {}
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: helloworld
  namespace: demo
spec:
  template:
    spec:
      containers:
      - image: ghcr.io/knative/helloworld-go:latest
        env:
          - name: TARGET
            value: "Go Sample v1"
